# fcc-mean-variance-dev-calc

./: pyproject.toml
source/: dev_calc.py  mean_var_dev_calc.py
tests/: test_dev_calc.py  test_mean_var_dev_calc.py
